fixed layout issues

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,14 +1,22 @@
+.cards {
+  /* fonts */
+}
+
 .card {
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
 }
 
 .card__list {
   display: grid;
+  justify-content: center;
   grid-template-columns: repeat(auto-fit, 282px);
-  grid-gap: 20px 18px;
+  grid-gap: 20px 17px;
   list-style-type: none;
-  margin: 0;
+  margin: auto;
   padding: 0;
+  max-width: 880px;
 }
 
 @media screen and (max-width: 568px) {
@@ -20,9 +28,18 @@
 .card__image {
   width: 282px;
   height: 282px;
+  gap: 0px;
+  border-radius: 10px 10px 0px 0px;
+  opacity: 0px;
 }
 
 .card__description {
+  display: flex;
+  background-color: white;
+  color: black;
+  padding: 25px 20px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card__title {
@@ -37,6 +54,10 @@
 }
 
 .card__like-button {
+  background: transparent url(../images/like-inactive.svg) center no-repeat;
+  width: 21px;
+  height: 18px;
+  border: none;
 }
 
 .button {
