--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -16,13 +16,15 @@
   height: 24px;
   width: 24px;
   grid-area: button;
+  border: 1px solid rgba(255, 255, 255, 1);
 }
 
 .profile__add-button {
   background: transparent url(../images/Add\ Button.svg) center no-repeat;
   width: 150px;
-  height: 150px;
+  height: 50px;
   margin-left: auto;
+  border: 2px solid rgba(255, 255, 255, 1);
 }
 
 .profile__title {
